# muxlane

./: .gitattributes  .gitignore  .npmrc  .prettierignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
apps/desktop/: DESIGN.md  PRODUCT.md  eslint.config.js  index.html  package.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  lifecycle.rs  main.rs  phase3.rs  runtime.rs
apps/desktop/src/components/: AppShell.tsx  TerminalPoc.test.tsx  TerminalPoc.tsx  TerminalViewport.tsx
apps/desktop/src/design/: theme.ts
apps/desktop/src/runtime/: controlBridge.ts  types.ts
apps/desktop/src/terminal/: phase3Bridge.ts  runtimeBridge.ts  runtimeStreamLifecycle.test.ts  runtimeStreamLifecycle.ts  streamLifecycle.test.ts  streamLifecycle.ts
crates/muxlane-cli/: Cargo.toml
crates/muxlane-cli/src/: main.rs
crates/muxlane-core/: Cargo.toml
crates/muxlane-core/src/: credential.rs  diagnostics.rs  error.rs  incident.rs  layout.rs  lib.rs  lock.rs  model.rs  process.rs  recovery.rs  service.rs  session.rs  storage.rs  terminal.rs  usage.rs  workbench.rs  workspace.rs
crates/muxlane-core/tests/: recovery_matrix.rs
crates/muxlane-protocol/: Cargo.toml
crates/muxlane-protocol/src/: lib.rs  wire_model.rs
crates/muxlaned/: Cargo.toml
crates/muxlaned/src/: main.rs  phase3.rs  terminal_data.rs
crates/muxlaned/tests/: control_plane.rs  phase3_gateway.rs  terminal_data_gateway.rs
crates/muxlaned/tests/fixtures/: auth.json
docs/: ARCHITECTURE.md  COMPATIBILITY.md  DATA_MODEL.md  PRD.md  PROJECT.md  PROTOCOL.md  README.md  RECOVERY_STATE_MACHINE.md  RUNTIME_LIFECYCLE.md  THREAT_MODEL.md
docs/adr/: 0001-windows-gui-wsl-control-plane.md  0002-project-scoped-codex-home.md  0003-exclusive-project-and-account-locks.md  0004-json-rpc-over-local-transport.md  0005-atomic-credential-checkout-and-commit.md  0006-durable-launch-transaction-journal.md  0007-process-identity-with-boot-id-and-start-time.md  0008-never-auto-resolve-credential-conflicts.md  0009-sqlite-for-metadata-not-credentials.md  0010-versioned-capability-negotiation.md  0011-separate-control-and-terminal-data-planes.md  0012-forward-only-versioned-database-migrations.md  0013-reframe-phase-7-as-safe-local-workbench.md  README.md
docs/poc/phase-2-runtime/: ENVIRONMENT_PROBE.md  HARNESS_SECURITY.md  KNOWN_LIMITATIONS.md  README.md  RESULTS.md  TEST_PROTOCOL.md
docs/poc/phase-3-terminal/: DESIGN.md  ENVIRONMENT.md  LIMITATIONS.md  README.md  RESULTS.md  SECURITY.md  TEST_PLAN.md
docs/research/: README.md
poc/phase-2-runtime/: README.md  credential_harness.py
poc/phase-2-runtime/fixtures/: synthetic-non-credential.json
poc/phase-2-runtime/scripts/: init-poc-root.sh  inspect-file-metadata.sh  probe-environment.sh  verify-poc-safety.sh
poc/phase-2-runtime/scripts/lib/: poc-safety.sh
poc/phase-2-runtime/tests/: harness-self-test.sh  test_credential_harness.py
poc/phase-4-recovery/: README.md  RESULTS.md  fault-injection.sh  windows-wsl-smoke.ps1  wsl-isolated-stage.sh
