[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/muxlane-cli",
  "crates/muxlane-core",
  "crates/muxlane-protocol",
  "crates/muxlaned",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
authors = ["Mingll22 <mingll22@foxmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/Mingll22/muxlane"
homepage = "https://github.com/Mingll22/muxlane"
documentation = "https://github.com/Mingll22/muxlane"
readme = "README.md"
keywords = ["codex", "windows", "wsl", "tauri"]
categories = ["command-line-utilities"]

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
fs4 = "1.1.0"
nix = { version = "0.31.3", features = ["fs", "signal", "socket", "user"] }
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
sha2 = "0.11.0"
tauri = { version = "2.11.5" }
tauri-build = { version = "2.6.3" }
thiserror = "2.0.19"
uuid = { version = "1.24.0", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
all = "warn"
