[package]
name = "muxlane-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Muxlane runtime diagnostics and recovery client"

[[bin]]
name = "muxlane"
path = "src/main.rs"

[dependencies]
clap.workspace = true
muxlane-core = { path = "../muxlane-core" }
muxlane-protocol = { path = "../muxlane-protocol" }
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true
