[package]
name = "muxlane-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Versioned local control protocol for Muxlane"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
muxlane-core = { path = "../muxlane-core" }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
