[package]
name = "muxlaned"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Muxlane daemon foundation"

[[bin]]
name = "muxlaned"
path = "src/main.rs"

[dependencies]
clap.workspace = true
muxlane-protocol = { path = "../muxlane-protocol" }
serde_json.workspace = true

[lints]
workspace = true
