[package]
name = "muxlaned"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Muxlane WSL runtime control-plane daemon"

[[bin]]
name = "muxlaned"
path = "src/main.rs"

[dependencies]
clap.workspace = true
muxlane-core = { path = "../muxlane-core" }
muxlane-protocol = { path = "../muxlane-protocol" }
nix.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
