[package]
name = "muxlane-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Muxlane desktop application shell"
publish = false

[[bin]]
name = "Muxlane"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
muxlane-protocol = { path = "../../../crates/muxlane-protocol" }
serde.workspace = true
serde_json.workspace = true
tauri = { workspace = true, features = ["tray-icon"] }

[lints]
workspace = true
